form align fix

--- a/app/sass/sections/_footer.scss
+++ b/app/sass/sections/_footer.scss
@@ -50,7 +50,7 @@
       padding-left: 45px;
       padding-right: 20px;
       outline: none;
-      text-align: left;
+      text-align: right;
     }
 
     & label {
