--- a/app/sass/sections/_general.scss
+++ b/app/sass/sections/_general.scss
@@ -382,7 +382,7 @@
   &__field {
     width: 100%;
     height: 30px;
-    text-align: left;
+    text-align: right;
     border: 0;
     background-color: transparent;
     border-bottom: 1px solid $wh;
